# asr

./: .gitignore  AGENTS.md  ASR.md  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  sonar-project.properties
.github/workflows/: ci.yml  web-e2e.yml  web.yml
.streamlit/: config.toml
config/: code_review.runtime.yaml  code_review.yaml  config.yaml  config.yaml.example  incident_management.yaml  skills.yaml
config/skills/: deep_investigator.md  intake.md  resolution.md  triage.md
docs/: 00-project-overview.md  01-local-setup.md  02-architecture.md  03-code-map.md  04-main-flows.md  05-configuration.md  06-data-model.md  07-integrations.md  08-testing.md  09-build-deploy-release.md  10-known-risks-and-todos.md  11-agent-handoff.md  AIRGAP_INSTALL.md  DESIGN.md  DEVELOPMENT.md  REACT_UI_PARITY.md  RELEASE.md  embedding_options.md
docs/adr/: 0001-current-architecture.md
examples/code_review/: README.md  __main__.py  config.py  config.yaml  mcp_server.py  state.py  ui.py
examples/incident_management/: README.md  __main__.py  config.py  config.yaml  mcp_server.py  runners.py  state.py  ui.py
incidents/faiss/: incidents.faiss  incidents.pkl
scripts/: build_single_file.py  check_genericity.py  lint_skill_prompts.py  migrate_jsonl_to_sql.py  package_airgap.py  seed_demo_incidents.py
src/orchestrator/: api.py  config.py  graph.py  incident.py  llm.py  mcp_loader.py  orchestrator.py  similarity.py  skill.py
src/runtime/: __main__.py  (+27 more)
tests/: _envelope_helpers.py  _policy_helpers.py  test_agent_node.py  test_ainvoke_retry_429.py  test_api.py  test_api_apps_overlay.py  test_api_react_surface.py  test_api_recent_events.py  test_api_session_full.py  test_api_static_serve.py  test_api_ui_hints.py  test_api_v1_legacy_redirects.py  test_api_v1_url_move.py  test_app_config_ui.py  test_approval_api.py  test_approval_watchdog.py  test_approval_watchdog_cancellation.py  test_asr_memory_state.py  test_asr_supervisor_node.py  test_build_graph.py  test_build_script.py  test_build_single_file.py  test_bundle_code_review.py  test_bundle_completeness.py  test_checkpoint_gc.py  test_checkpointer.py  test_code_review_e2e.py  test_code_review_mcp_server.py  test_code_review_scaffold.py  test_code_review_skills.py  test_concept_leak_ratchet.py  test_config.py  test_config_loader.py  test_dedup_integration.py  test_dedup_lifecycle.py  test_dedup_mounted_in_build_app.py  test_dedup_pipeline.py  test_dedup_retraction.py  test_e2e.py  test_e2e_telemetry_and_learning.py  (+118 more)
ui/: streamlit_app.py
web/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+253 files in other folders)
