[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "asr"
version = "0.1.0"
description = "Agent orchestrator for incident investigation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "fastmcp>=2.10",
    "langgraph>=0.6",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.1",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "streamlit>=1.40",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
